--- a/Analytics_Projects/PopularityProgrammingLanguages/main.ipynb
+++ b/Analytics_Projects/PopularityProgrammingLanguages/main.ipynb
@@ -37,7 +37,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": 1,
       "metadata": {
         "colab": {},
         "colab_type": "code",
@@ -71,7 +71,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 2,
       "metadata": {
         "colab": {},
         "colab_type": "code",
@@ -94,7 +94,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 3,
       "metadata": {
         "colab": {},
         "colab_type": "code",
@@ -171,7 +171,7 @@
               "4  2008-08-01 00:00:00       c++    164"
             ]
           },
-          "execution_count": 15,
+          "execution_count": 3,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -182,7 +182,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [
         {
@@ -255,13 +255,39 @@
               "2592  2024-02-01 00:00:00   swift    708"
             ]
           },
-          "execution_count": 16,
+          "execution_count": 4,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
         "df.tail()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 5,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 2593 entries, 0 to 2592\n",
+            "Data columns (total 3 columns):\n",
+            " #   Column  Non-Null Count  Dtype \n",
+            "---  ------  --------------  ----- \n",
+            " 0   DATE    2593 non-null   object\n",
+            " 1   TAG     2593 non-null   object\n",
+            " 2   POSTS   2593 non-null   int64 \n",
+            "dtypes: int64(1), object(2)\n",
+            "memory usage: 60.9+ KB\n"
+          ]
+        }
+      ],
+      "source": [
+        "df.info()"
       ]
     },
     {
